--- a/index.html
+++ b/index.html
@@ -1,1 +1,24 @@
-Hello World
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Rebecca Yee</title>
+  </head>
+  <body>
+    <h1>Welcome to my porfolio!</h1>
+    <p>
+      My name is Rebecca Yee. I am an incoming sophomore studying computer
+      science at Rice University.
+    </p>
+    <h2>My Projects</h2>
+    <ul>
+      <li>
+        <a href="https://rebecca-yee.github.io/cowculator/"
+          >I made a simple four-function, cow-themed calculator!</a
+        >
+      </li>
+    </ul>
+  </body>
+</html>
