Add new project

--- a/index.html
+++ b/index.html
@@ -16,7 +16,12 @@
     <ul>
       <li>
         <a href="https://rebecca-yee.github.io/cowculator/"
-          >I made a simple four-function, cow-themed calculator!</a
+          >I made a simple four-function, cow-themed calculator.</a
+        >
+      </li>
+      <li>
+        <a href="https://rebecca-yee.github.io/mad-libs/"
+          >I made a story generate similar to Mad Libs, where users can input different words to create a unique story.</a
         >
       </li>
     </ul>
