--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <h2>My Projects</h2>
     <ul>
       <li>I made a simple four-function, cow-themed <a href="https://rebecca-yee.github.io/cowculator/" target="_blank">calculator</a> using HTML, CSS, and JavaScript.</li>
-      <li>I made a <a href="https://rebecca-yee.github.io/mad-libs/ target="_blank"">story generator</a> similar to Mad Libs, where users can input different words
+      <li>I made a <a href="https://rebecca-yee.github.io/mad-libs/" target="_blank"">story generator</a> similar to Mad Libs, where users can input different words
         to create a unique story. I used HTML forms, CSS, and JavaScript.</li>
     </ul>
   </body>
