Add nav bar and styling

--- a/index.html
+++ b/index.html
@@ -8,88 +8,103 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Balsamiq+Sans:wght@400;700&family=Poppins:wght@400;700&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Balsamiq+Sans:wght@400;700&family=Poppins:wght@400&display=swap"
       rel="stylesheet"
     />
     <title>Rebecca Yee</title>
   </head>
   <body>
-    <nav>
-      <h1>Rebecca Yee</h1>
-      <ul>
-        <li><a href="#about-me">About Me</a></li>
-        <li><a href="#projects">Projects</a></li>
-        <li><a href="#skills">Skills</a></li>
-        <li><a href="#contact">Contact</a></li>
-      </ul>
-    </nav>
-    <section id="about-me">
-      <h2>About Me</h2>
-      <p>
-        Hi, my name is Rebecca! I am an incoming sophomore studying computer
-        science at Rice University, located in Houston, Texas. I intend on
-        graduating in May of 2024 with a B.A. in Computer Science and a minor in
-        Environmental Studies. I started getting into computer programming in
-        December of 2020; since then, I have taught myself multiple programming
-        languages, and I can't wait to learn more! I have expanded my
-        programming knowledge through my college courses, participation in open
-        source accelerator programs, and self-learning online. I would like to
-        build on my front-end development skills as well as become more familiar
-        with back-end development. In my free time, I enjoy reading, playing
-        with my cat, Harvey, and jamming out to Taylor Swift.
-      </p>
-    </section>
-    <section id="projects">
-      <h2>Projects</h2>
-      <ul>
-        <li class="project">
-          I was one of the first place winners of the Rice SASE (Society of
-          Asian Scientists and Engineers) Spring 2021 Hackathon.
+    <header>
+      <div class="header-info">
+        <h1 class="logo">Rebecca Yee</h1>
+        <nav>
           <ul>
-            <li class="nested">
-              We developed
-              <a href="https://devpost.com/software/walkytalky" target="_blank"
-                >WalkyTalky</a
-              >, a web application that allows users to connect with friends by
-              scheduling socially-distanced walks.
-            </li>
-            <li clas="nested">I worked on the UI/UX design.</li>
+            <li><a href="#about-me">About Me</a></li>
+            <li><a href="#projects">Projects</a></li>
+            <li><a href="#skills">Skills</a></li>
+            <li><a href="#contact">Contact</a></li>
           </ul>
-        </li>
+        </nav>
+      </div>
+    </header>
+    <main>
+      <section id="about-me">
+        <div id="about-me-text">
+          <h2>ABOUT ME</h2>
+          <p>
+            Hi, my name is Rebecca! I'm a sophomore studying computer science at
+            Rice University, located in Houston, Texas. I intend on graduating
+            in May of 2024 with a B.A. in Computer Science and a minor in
+            Environmental Studies. I started getting into computer programming
+            in December of 2020; since then, I have taught myself multiple
+            programming languages, and I can't wait to learn more! I have
+            expanded my programming knowledge through my college courses,
+            participation in open source accelerator programs, and self-learning
+            online. I would like to build on my front-end development skills as
+            well as become more familiar with back-end development. In my free
+            time, I enjoy reading, playing with my cat, Harvey, and jamming out
+            to Taylor Swift.
+          </p>
+        </div>
+        <img src="owl.png" />
+      </section>
+      <hr />
+      <section id="projects">
+        <h2>PROJECTS</h2>
+        <ul>
+          <li class="project">
+            I was one of the first place winners of the Rice SASE (Society of
+            Asian Scientists and Engineers) Spring 2021 Hackathon.
+            <ul>
+              <li>
+                We developed
+                <a
+                  href="https://devpost.com/software/walkytalky"
+                  target="_blank"
+                  >WalkyTalky</a
+                >, a web application that allows users to connect with friends
+                by scheduling socially-distanced walks.
+              </li>
+              <li>I worked on the UI/UX design.</li>
+            </ul>
+          </li>
 
-        <li class="project">
-          I made a simple four-function, cow-themed
-          <a href="https://rebecca-yee.github.io/cowculator/" target="_blank"
-            >calculator</a
-          >
-          using HTML, CSS, and JavaScript.
-        </li>
-        <li class="project">
-          I made a
-          <a href="https://rebecca-yee.github.io/mad-libs/" target="_blank"
-            >story generator</a
-          >
-          similar to Mad Libs, where users can input different words to create a
-          unique story. I used HTML forms, CSS, and JavaScript.
-        </li>
-      </ul>
-    </section>
-    <section id="skills">
-      <h2>Skills</h2>
-      <ul>
-        <li>Python 3</li>
-        <li>Java</li>
-        <li>HTML</li>
-        <li>CSS</li>
-        <li>JavaScript</li>
-        <li>React</li>
-        <li>React Native</li>
-        <li>GitHub</li>
-      </ul>
-    </section>
-    <section id="contact">
-      <h2>Contact Me</h2>
-      <p>Email: rmy3@rice.edu</p>
-    </section>
+          <li class="project">
+            I made a simple four-function, cow-themed
+            <a href="https://rebecca-yee.github.io/cowculator/" target="_blank"
+              >calculator</a
+            >
+            using HTML, CSS, and JavaScript.
+          </li>
+          <li class="project">
+            I made a
+            <a href="https://rebecca-yee.github.io/mad-libs/" target="_blank"
+              >story generator</a
+            >
+            similar to Mad Libs, where users can input different words to create
+            a unique story. I used HTML forms, CSS, and JavaScript.
+          </li>
+        </ul>
+      </section>
+      <hr />
+      <section id="skills">
+        <h2>SKILLS</h2>
+        <ul>
+          <li>Python 3</li>
+          <li>Java</li>
+          <li>HTML</li>
+          <li>CSS</li>
+          <li>JavaScript</li>
+          <li>React</li>
+          <li>React Native</li>
+          <li>GitHub</li>
+        </ul>
+      </section>
+      <hr />
+      <section id="contact">
+        <h2>CONTACT ME</h2>
+        <p>Email: rmy3@rice.edu</p>
+      </section>
+    </main>
   </body>
 </html>
