--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
             to Taylor Swift.
           </p>
         </div>
-        <img src="owl.png" />
+        <img src="portfolio.jpg" />
       </section>
       <hr />
       <section id="projects">
