Add Second Servings section

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Balsamiq+Sans:wght@400;700&family=Poppins:wght@400&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap"
       rel="stylesheet"
     />
     <title>Rebecca Yee</title>
@@ -46,12 +46,18 @@
             to Taylor Swift.
           </p>
         </div>
-        <img src="portfolio.jpg" />
+        <img id="profile" src="./media/main/rebecca.jpg" />
       </section>
       <hr />
       <section id="projects">
         <h2>PROJECTS</h2>
         <ul>
+          <li class="project">
+            I was a mentee for
+            <a href="https://riceapps.org" target="_blank">RiceApps'</a> Open
+            Source Accelerator (OSA) program. I collaborated with a team to
+            further develop our app, <a href="osa.html">Second Servings</a>.
+          </li>
           <li class="project">
             I was one of the first place winners of the Rice SASE (Society of
             Asian Scientists and Engineers) Spring 2021 Hackathon.
@@ -89,20 +95,33 @@
       <hr />
       <section id="skills">
         <h2>SKILLS</h2>
-        <ul>
+        <ul class="skills">
           <li>Python 3</li>
           <li>Java</li>
+        </ul>
+        <ul class="skills">
           <li>HTML</li>
-          <li>CSS</li>
-          <li>JavaScript</li>
           <li>React</li>
+        </ul>
+        <ul class="skills">
+          <li>CSS</li>
           <li>React Native</li>
+        </ul>
+        <ul class="skills">
+          <li>JavaScript</li>
           <li>GitHub</li>
         </ul>
       </section>
       <hr />
       <section id="contact">
         <h2>CONTACT ME</h2>
+        <p>
+          <a
+            href="https://www.linkedin.com/in/rebecca-yee-b5b6481b0/"
+            target="_blank"
+            >LinkedIn</a
+          >
+        </p>
         <p>Email: rmy3@rice.edu</p>
       </section>
     </main>
