--- a/index.html
+++ b/index.html
@@ -32,18 +32,16 @@
         <div id="about-me-text">
           <h2>ABOUT ME</h2>
           <p>
-            Hi, my name is Rebecca! I'm a sophomore studying computer science at
-            Rice University, located in Houston, Texas. I intend on graduating
-            in May of 2024 with a B.A. in Computer Science and a minor in
-            Environmental Studies. I started getting into computer programming
-            in December of 2020; since then, I have taught myself multiple
-            programming languages, and I can't wait to learn more! I have
-            expanded my programming knowledge through my college courses,
-            participation in open source accelerator programs, and self-learning
-            online. I would like to build on my front-end development skills as
-            well as become more familiar with back-end development. In my free
-            time, I enjoy reading, playing with my cat, Harvey, and jamming out
-            to Taylor Swift.
+            Hi, my name is Rebecca! I'm a sophomore studying psychology at Rice
+            University, located in Houston, Texas. I intend on graduating in May
+            of 2024 with a B.A. in Psychology and a minor in Environmental
+            Studies. After programming various web development and hackathon
+            projects, I realized I had more of a passion for the UI/UX design
+            area of product building--for getting into the mind of the user and
+            optimizing the product to be as convenient as possible. I am
+            interested in developing my design skills and learning more about
+            the UI/UX process. In my free time, I enjoy reading, playing with my
+            cat, Harvey, and jamming out to Taylor Swift.
           </p>
         </div>
         <img id="profile" src="./media/main/rebecca.jpg" />
@@ -52,12 +50,6 @@
       <section id="projects">
         <h2>PROJECTS</h2>
         <ul>
-          <li class="project">
-            I was a mentee for
-            <a href="https://riceapps.org" target="_blank">RiceApps'</a> Open
-            Source Accelerator (OSA) program. I collaborated with a team to
-            further develop our app, <a href="osa.html">Second Servings</a>.
-          </li>
           <li class="project">
             I was one of the first place winners of the Rice SASE (Society of
             Asian Scientists and Engineers) Spring 2021 Hackathon.
@@ -71,8 +63,17 @@
                 >, a web application that allows users to connect with friends
                 by scheduling socially-distanced walks.
               </li>
-              <li>I worked on the UI/UX design.</li>
+              <li>
+                I worked on the UI/UX design, sketching user flows and
+                wireframes for home, walks, friends, and availability screens.
+              </li>
             </ul>
+          </li>
+          <li class="project">
+            I was a mentee for
+            <a href="https://riceapps.org" target="_blank">RiceApps'</a> Open
+            Source Accelerator (OSA) program. I collaborated with a team to
+            further develop our app, <a href="osa.html">Second Servings</a>.
           </li>
 
           <li class="project">
@@ -96,8 +97,8 @@
       <section id="skills">
         <h2>SKILLS</h2>
         <ul class="skills">
+          <li>Figma</li>
           <li>Python 3</li>
-          <li>Java</li>
         </ul>
         <ul class="skills">
           <li>HTML</li>
