--- a/index.html
+++ b/index.html
@@ -14,117 +14,12 @@
     <title>Rebecca Yee</title>
   </head>
   <body>
-    <header>
-      <div class="header-info">
-        <h1 class="logo">Rebecca Yee</h1>
-        <nav>
-          <ul>
-            <li><a href="#about-me">About Me</a></li>
-            <li><a href="#projects">Projects</a></li>
-            <li><a href="#skills">Skills</a></li>
-            <li><a href="#contact">Contact</a></li>
-          </ul>
-        </nav>
-      </div>
-    </header>
     <main>
-      <section id="about-me">
-        <div id="about-me-text">
-          <h2>ABOUT ME</h2>
-          <p>
-            Hi, my name is Rebecca! I'm a sophomore studying psychology at Rice
-            University, located in Houston, Texas. I intend on graduating in May
-            of 2024 with a B.A. in Psychology and a minor in Environmental
-            Studies. After programming various web development and hackathon
-            projects, I realized I had more of a passion for the UI/UX design
-            area of product building--for getting into the mind of the user and
-            optimizing the product to be as convenient as possible. I am
-            interested in developing my design skills and learning more about
-            the UI/UX process. In my free time, I enjoy reading, playing with my
-            cat, Harvey, and jamming out to Taylor Swift.
-          </p>
-        </div>
-        <img id="profile" src="./media/main/rebecca.jpg" />
-      </section>
-      <hr />
-      <section id="projects">
-        <h2>PROJECTS</h2>
-        <ul>
-          <li class="project">
-            I was one of the first place winners of the Rice SASE (Society of
-            Asian Scientists and Engineers) Spring 2021 Hackathon.
-            <ul>
-              <li>
-                We developed
-                <a
-                  href="https://devpost.com/software/walkytalky"
-                  target="_blank"
-                  >WalkyTalky</a
-                >, a web application that allows users to connect with friends
-                by scheduling socially-distanced walks.
-              </li>
-              <li>
-                I worked on the UI/UX design, sketching user flows and
-                wireframes for home, walks, friends, and availability screens.
-              </li>
-            </ul>
-          </li>
-          <li class="project">
-            I was a mentee for
-            <a href="https://riceapps.org" target="_blank">RiceApps'</a> Open
-            Source Accelerator (OSA) program. I collaborated with a team to
-            further develop our app, <a href="osa.html">Second Servings</a>.
-          </li>
-
-          <li class="project">
-            I made a simple four-function, cow-themed
-            <a href="https://rebecca-yee.github.io/cowculator/" target="_blank"
-              >calculator</a
-            >
-            using HTML, CSS, and JavaScript.
-          </li>
-          <li class="project">
-            I made a
-            <a href="https://rebecca-yee.github.io/mad-libs/" target="_blank"
-              >story generator</a
-            >
-            similar to Mad Libs, where users can input different words to create
-            a unique story. I used HTML forms, CSS, and JavaScript.
-          </li>
-        </ul>
-      </section>
-      <hr />
-      <section id="skills">
-        <h2>SKILLS</h2>
-        <ul class="skills">
-          <li>Figma</li>
-          <li>Python 3</li>
-        </ul>
-        <ul class="skills">
-          <li>HTML</li>
-          <li>React</li>
-        </ul>
-        <ul class="skills">
-          <li>CSS</li>
-          <li>React Native</li>
-        </ul>
-        <ul class="skills">
-          <li>JavaScript</li>
-          <li>GitHub</li>
-        </ul>
-      </section>
-      <hr />
-      <section id="contact">
-        <h2>CONTACT ME</h2>
-        <p>
-          <a
-            href="https://www.linkedin.com/in/rebecca-yee-b5b6481b0/"
-            target="_blank"
-            >LinkedIn</a
-          >
-        </p>
-        <p>Email: rmy3@rice.edu</p>
-      </section>
+      Hey, thanks for visiting!
+      <a href="https://rmy323.wixsite.com/my-site" target="_blank"
+        >Please check out my new website here.</a
+      ><br /><br />
+      - Rebecca :)
     </main>
   </body>
 </html>
